Modificaciones en ejercicio 08 html numero 1

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -6,6 +6,8 @@
      <style>
        div {
            text-align: center;
+           color:rgb(8, 6, 8);
+           font-size: 18px;
        } 
        a {
            display: block;
